<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mensajeros Urbanos</string>
    <string name="facebook_app_id">794128060628855</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="action_next">Siguiente</string>



    <string name="Seleccione_tipo_serv">Seleccione el tipo de servicio</string>

    <string name="Express">Express</string>
    <string name="Standard">Standard</string>
    <string name="Por_horas">Por horas</string>
    <string name="Tipo_diligencia">Diligencia</string>

    <string name="Seleccione_fecha_hora">Seleccione fecha y hora de recogida</string>
    <string name="Siguiente">Siguiente</string>
    <string name="DirRecogida">Dirección de recogida</string>
    <string name="DirEntrega">Dirección de entrega</string>
    <string name="DirRecogidaText">Digite la dirección de recogida</string>
    <string name="DirEntregaText">Digite la dirección de entrega</string>
    <string name="addDirection">Agregar otra dirección</string>
    <string name="removeDirection">Borrar dirección</string>
    <string name="promcode">Codigo promocional</string>
    <string name="fecha">Fecha recogida</string>
    <string name="tiposervicio">Tipo de servicio</string>
    <string name="direccionrecogida">Dirección de recogida</string>
    <string name="direccionentrega">Dirección de entrega</string>
    <string name="ciudad">Ciudad</string>
    <string name="idayvuelta">Ida y vuelta</string>
    <string name="Valorserv">Valor del servicio</string>

    <string name="Descripcion">Escriba de manera detallada \n las instrucciones de este servicio. \n Incluye nombres y numeros \n de contacto en cada direccion.\n Recuerda que el máximo \n tamaño a enviar es de 40cm</string>
    <string name="Valor_declarado">Valor declarado</string>


    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_share">Compartir</string>
    <string name="navigation_drawer_logout">Salir</string>
    <string name="navigation_drawer_help">Ayuda y contacto</string>

    <string name="faq_terms"><a href="http://app.mensajerosurbanos.com/site/terminos.html">Terminos y condiciones</a></string>

    <string name="navigation_drawer_services">Servicios</string>

    <string-array name="city_array">
        <item>Bogotá</item>
        <item>Cali</item>
        <item>Medellin</item>

    </string-array>

    <string name="city_prompt">Bogotá</string>
    
    <string name="Express_text0">Se recoge en menos de 60 minutos y se transporta inmediatamente. Envío de documento o mercancía pequeña de un punto a otro dentro del casco urbano de la ciudad. El regreso al punto de origen tiene un costo adicional de 6000 pesos COP.

Valor: $ 14000
Seguro: $ 0
Total aproximado a pagar:
$14000


Por Distancia se cobrará un recargo adicional. Aproximado 6000 pesos por cada 70 cuadras (80 metros por cuadra).</string>

    <string name="Express_text">Si lo que necesitas es rapidez, un mensajero llegará en menos de 60 minutos para realizar tu servicio.</string>

    <string name="Standard_text0">*Se realiza el mismo día ÚNICAMENTE sí es solicitado antes de las 1 PM. En caso contrario el servicio se realizará al día siguiente

Se recoge y se entrega antes de las 5 PM del mismo día. Envío de documento o mercancía pequeña de un punto a otro dentro del casco urbano de la ciudad. El regreso al punto de origen tiene un costo adicional de 6000 pesos COP.

Valor: $ 10000
Seguro: $ 0
Total aproximado a pagar:
$10000


Por Distancia se cobrará un recargo adicional. Aproximado 6000 pesos por cada 70 cuadras (80 metros por cuadra).</string>

<string name="Standard_text">Es un servicio NO urgente, se solicita antes de las 12:00 M para ser realizado el mismo dia, de lo contrario es realizado el dia siguiente</string>
<string name="Diligencia_text">Tramites legales, radicaciones, pago de impuestos, EPS. Llegamos en menos de 60 min, Despues de 15 minutos de espera recargo por tiempo</string>

<string name="tipousuario">Tipo de usuario</string>

<string name="done_label">Listo</string>



    <string name="clear"></string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="update">Update</string>

    <string name="drawer_open">Open drawer navigation</string>
    <string name="drawer_close">Navigation drawer Close</string>

    <string name="titulo_user">Rudson Lima</string>
    <string name="subtitulo_user">rudsonlive@gmail.com</string>

    <string name="tab_one">Tab One</string>
    <string name="tab_two">Tab Two</string>
    <string name="tab_three">Tab Three</string>

    <string name="fragment_my_apps">This is MyApps</string>
    <string name="fragment_shop_apps">This is ShopApps</string>
    <string name="fragment_tab_one">This is One</string>
    <string name="fragment_tab_two">This is Two</string>
    <string name="fragment_tab_three">This is Three</string>



</resources>
