<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/map"

        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_margin="5dp"
        android:layout_weight="1" />




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Valor del servicio"
                android:id="@+id/textView5"
                android:layout_weight="1"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/ResumenValorServ"
                android:layout_weight="1"
                android:textSize="18dp"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:id="@+id/linear1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:textSize="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/ResumenFecha"
            android:layout_weight="1"
            android:gravity="right" />

    </LinearLayout>

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:id="@+id/linear3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/direccionrecogida"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:textSize="16dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/ResumenDireccionRecogida"
            android:layout_weight="1"
            android:gravity="right" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:id="@+id/linear4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/direccionentrega"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:textSize="16dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/ResumenDireccionEntrega"
            android:layout_weight="1"
            android:gravity="right" />
    </LinearLayout>


        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:id="@+id/linear8">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/idayvuelta"
            android:id="@+id/textView8"
            android:layout_weight="1"
            android:textSize="16dp" />

        <CheckBox
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxida"
            android:checked="false"
            android:layout_weight="0.08" />

    </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Solicitar servicio"
            android:background="@drawable/button_shape_blue"
            android:id="@+id/Solicitarbutton"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</LinearLayout>