<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView" >

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:id="@+id/imageView3"
            android:src="@drawable/banderin"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/UserName"
            android:textColor="#FFFFFF"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/SecondStepLayout">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center">

                    <EditText
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirRecogidaText"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:background="@drawable/button_shape_nocolor_top"
                        android:hint="Dirección de recogida"
                        android:drawableLeft="@drawable/ico_ubicacion_actual"
                        android:ellipsize="start"
                        android:padding="5dp"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:gravity="center" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/dirRecogidaIcon"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1" />
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                   android:layout_marginBottom="20dp">

                    <EditText
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="Dirección de entrega"
                        android:drawableLeft="@drawable/ico_ubicacion"
                        android:ellipsize="start"
                        android:background="@drawable/button_shape_nocolor_bottom"
                        android:padding="5dp"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:gravity="center" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/dirEntregaIcon"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ida y vuelta"
                    android:id="@+id/idavuelta"
                    android:checked="false"
                    android:textColor="#8F8A8A"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/add_remove_directions">

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Agregar dirección"
                        android:id="@+id/more_directions"
                        android:drawableLeft="@android:drawable/ic_input_add"

                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:textColor="#8F8A8A" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/removeDirection"
                        android:id="@+id/remove_direction"
                        android:drawableLeft="@android:drawable/ic_delete"
                        android:layout_weight="1"
                        android:textColor="#8F8A8A"
                        android:background="#FFFFFF" />


                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">



                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText3"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/button_shape_nocolor_top"
                        android:padding="5dp"

                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText4"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText5"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText6"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText7"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText8"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText9"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText10"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText11"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText12"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText13"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"


                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText14"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                        />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText15"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText16"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText17"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText18"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"

                        android:visibility="gone"
                         />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText19"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/onlyborders"
                        android:padding="5dp"

                        />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dirEntregaText20"
                        android:layout_gravity="center"
                        android:autoText="false"
                        android:hint="@string/DirEntregaText"
                        android:background="@drawable/button_shape_nocolor_bottom"
                        android:padding="5dp"

                        android:layout_marginBottom="5dp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Siguiente"
                    android:textColor="#ffffff"
                    android:id="@+id/Next2"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_shape_blue"
                    android:padding="10dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
            </LinearLayout>
        </LinearLayout>


</LinearLayout>

</ScrollView>